# bball-ref-agents

./: .gcloudignore  .gitignore  README.md  cloudbuild.backend.yaml  cloudbuild.frontend.yaml  cloudbuild.yaml  install_deps.sh  package-lock.json
agents/: pyproject.toml
agents/agents/: __init__.py  adk_compat.py  crew_chief.py  session_orchestrator.py  specialists.py
agents/bball_ref_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/models/: __init__.py  settings.py
agents/prompts/: __init__.py  instructions.py  nba_rules.json  nba_rules_comments.json
agents/schemas/: __init__.py  reports.py  session.py
agents/tests/: test_agent_tree.py
agents/utils/: __init__.py  media.py
agents/workflows/: __init__.py  session_workflow.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/fixtures/: examples_catalog.json  seed_session_metadata_example_1.json  seed_session_metadata_example_2.json  seed_session_metadata_example_3.json
backend/app/schemas/: realtime.py  session.py  verdict.py  ws.py
backend/app/services/: agents_client.py  example_service.py  review_orchestrator.py  session_service.py  speech_stream.py  upload_service.py
backend/app/utils/: secrets.py  storage.py
backend/app/ws/: manager.py
backend/backend/data/: sessions.db
deploy/: backend.env.yaml
docs/: architecture-diagram.md  crew-chief-turn-based-protocol.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
media/examples/: README.md
(+25 files in other folders)
